[gd_scene load_steps=26 format=2]

[ext_resource path="res://Buttons/GoButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buttons/RedAlertButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUIElements/ControlsContainer.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_right = 20.0
bg_color = Color( 0.533333, 0.133333, 0.0666667, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
content_margin_right = 20.0
bg_color = Color( 0.733333, 0.266667, 0.0666667, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
content_margin_right = 20.0
bg_color = Color( 1, 0.611765, 0, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
content_margin_right = 20.0
bg_color = Color( 0.968627, 0.741176, 0.352941, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
content_margin_right = 20.0
bg_color = Color( 0.8, 0.4, 0.4, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
content_margin_right = 20.0
bg_color = Color( 0.8, 0.4, 0.6, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=9]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=10]
content_margin_right = 20.0
bg_color = Color( 0.466667, 0.266667, 0.4, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=11]
content_margin_right = 20.0
bg_color = Color( 0.6, 0.466667, 0.666667, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=12]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=13]
content_margin_right = 20.0
bg_color = Color( 0.392157, 0.427451, 0.8, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=14]
content_margin_right = 20.0
bg_color = Color( 0.611765, 0.611765, 1, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=15]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=16]
content_margin_right = 20.0
bg_color = Color( 0, 0, 0.533333, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=17]
content_margin_right = 20.0
bg_color = Color( 0.2, 0.4, 1, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=18]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=19]
content_margin_right = 20.0
bg_color = Color( 0.533333, 0.133333, 0.0666667, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=20]
content_margin_right = 20.0
bg_color = Color( 0.733333, 0.266667, 0.0666667, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=21]
content_margin_right = 20.0
bg_color = Color( 0.603922, 0.603922, 0.603922, 1 )
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_detail = 20
anti_aliasing = false

[sub_resource type="Animation" id=22]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ControlsContainer" type="VBoxContainer"]
margin_right = 130.0
margin_bottom = 540.0
rect_min_size = Vector2( 130, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 12
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoButton" parent="." instance=ExtResource( 1 )]
margin_bottom = 36.0
hint_tooltip = "Make the ship go!"
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
action_mode = 1
text = "ENGAGE"
color = 3

[node name="ExploreButton" parent="." instance=ExtResource( 2 )]
margin_top = 48.0
margin_bottom = 84.0
hint_tooltip = "Stop the ship to explore around you"
size_flags_horizontal = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
action_mode = 1
text = "Explore"

[node name="RepairButton" parent="." instance=ExtResource( 2 )]
margin_top = 96.0
margin_bottom = 132.0
hint_tooltip = "Stop the ship to repair"
size_flags_horizontal = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
action_mode = 1
text = "Repair"
color = 4

[node name="SetSpeedButton" parent="." instance=ExtResource( 2 )]
margin_top = 144.0
margin_bottom = 180.0
hint_tooltip = "Set your warp speed.  More speed uses more fuel and wears down the engine quicker."
size_flags_horizontal = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
action_mode = 1
text = "Set Speed"
color = 2

[node name="SetRationsButton" parent="." instance=ExtResource( 2 )]
margin_top = 192.0
margin_bottom = 228.0
hint_tooltip = "Set the level of rations your crew consumes. Affects morale and fuel usage"
size_flags_horizontal = 0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 14 )
action_mode = 1
text = "Set Rations"
color = 1

[node name="SickbayButton" parent="." instance=ExtResource( 2 )]
margin_top = 240.0
margin_bottom = 276.0
hint_tooltip = "Rest..."
size_flags_horizontal = 0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 16 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 17 )
action_mode = 1
text = "Sick Bay"
color = 5

[node name="StopButton" parent="." instance=ExtResource( 2 )]
margin_top = 288.0
margin_bottom = 324.0
hint_tooltip = "Bring the ship to a complete stop."
size_flags_horizontal = 0
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 20 )
action_mode = 1
text = "FULL STOP"
color = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 22 )
[connection signal="pressed" from="GoButton" to="." method="_on_GoButton_pressed"]
[connection signal="pressed" from="ExploreButton" to="." method="_on_ExploreButton_pressed"]
[connection signal="pressed" from="RepairButton" to="." method="_on_RepairButton_pressed"]
[connection signal="pressed" from="SetSpeedButton" to="." method="_on_SetSpeedButton_pressed"]
[connection signal="pressed" from="SetRationsButton" to="." method="_on_SetRationsButton_pressed"]
[connection signal="pressed" from="SickbayButton" to="." method="_on_SickbayButton_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]
